# dtm

./: .gitignore  Cargo.toml  README.md  rgba-packet.md
benches/: decoding.rs
data/: Makefile
examples/: basic.rs  benchmark.rs  convert.rs  dual_channel.rs  encode.rs
src/: decode.rs  encode.rs  lib.rs  test.rs
