[package]
name = "dtm"
description = "Fast encoder/decoder for the lossless DTM 16 bit image format."
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["multimedia::images", "multimedia::encoding", "encoding", "graphics"]
keywords = ["dtm", "graphics", "image", "encoding"]
exclude = ["images/*" ,"examples/*"]
readme = "README.md"
authors = ["Kurt Kühnert <kurt@kuehnert.dev>"]
repository = "https://github.com/ku95/dtm"

[dev-dependencies]
image = "0.24"
criterion = "0.3"
tiff = "0.7.3"

[[bench]]
name = "decoding"
harness = false
